plugins {
    id 'java'
    id 'idea'
    id 'checkstyle'
}

group 'by.itman'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.11

repositories {
    mavenCentral()
}

test {
    jvmArgs = ["-Duser.timezone=UTC", "-Duser.language=en"]
    useJUnitPlatform()
}

checkstyle {
    toolVersion '9.2'
    maxWarnings(0)
}

dependencies {  
    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.6'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.6'
}
